css/static.css
* {
	margin: 0;
	padding: 0;
}

html{
	height:100%;
}

body{
	padding:0;
	margin:0;
	height:100%;
	/*background-color: black;*/
	background-image: url("../pic/mememaster-background.jpg");
}

span,div,input,button{
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing: border-box;         /* Opera/IE 8+ */
}

.container{
	height:100%;
	/*background-color: yellow;*/
	overflow: hidden;
}

.left-panel{
	height:100%;
	width:2in;
	background-color: rgba(255,255,255,0.2);
	float:left;
	overflow: hidden;
}

.logo{
	width:100%;
	height:0.8in;
	background-color: white;
}


.category{
	display: inline-block;
	width:100%;
	height:100%;
	padding-bottom: 1in;
}

.category-item{
	width:100%;
	height:0.8in;
	background-color: rgba(133,133,180,0.7);
	text-align: center;
	padding-top: 0.3in;
	border-top: 1px solid rgba(250,250,250,0.8);
	font-size:1.5em;
	color:rgba(255,255,255,1.0);
}

.right-panel{
	height:100%;
	width:100%;
	margin-left: 2in;
	padding-right:2in;
	/*background-color: grey;*/
}

.search-bar{
	width:100%;
	height:0.8in;
	/*background-color: purple;*/
}

#search-box{
	-webkit-appearance:none;
	border:none;
	width:88%;
	height:0.5in;
	padding-left: 0.1in;
	margin-top: 0.07in;
	margin-left:1%;
	font-size: 1em;
	background-color:rgba(200,200,210,0.5);
}

#search-button{
	margin-left: -0.1in;
	width:10%;
	height: 0.51in;
	margin-top: 0.15in;
	font-size: 1em;
}

.content-view{
	width:100%;
	height:100%;
	/*background-color: orange;*/
	padding-bottom: 1in;
}

